--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Holden Poker Tracker" />
     
-    <title>Dealin Holden</title>
+    <title>Changing 500</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
